anh bay oiiiiiiiiiiiiiiiiiiiii

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,10 @@ plugins {
 }
 
 android {
+    buildFeatures {
+        viewBinding = true 
+    }
+
     namespace 'com.project.chatapp'
     compileSdk 35
 
