--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     alias(libs.plugins.android.application)
     id 'com.google.gms.google-services' version '4.4.2'
-
 }
 
 android {
@@ -48,4 +47,9 @@ dependencies {
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
     implementation 'com.hbb20:ccp:2.5.1'
+    implementation 'com.cloudinary:cloudinary-android:2.3.1'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 }
