--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+    implementation 'com.google.android.exoplayer:exoplayer:2.19.1'
 }
