--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-messaging:23.0.0'
+    implementation 'io.agora.rtc:full-sdk:4.2.2'
     implementation 'com.google.firebase:firebase-database'
     implementation(platform("com.google.firebase:firebase-bom:32.2.2"))
     implementation 'com.google.firebase:firebase-auth'
