--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,8 @@ android {
 dependencies {
     implementation 'com.google.firebase:firebase-messaging:23.0.0'
     implementation 'io.agora.rtc:full-sdk:4.2.2'
+    implementation 'com.google.android.gms:play-services-maps:18.2.0'
+    implementation 'com.google.android.libraries.places:places:3.3.0'
     implementation 'com.google.firebase:firebase-database'
     implementation(platform("com.google.firebase:firebase-bom:32.2.2"))
     implementation 'com.google.firebase:firebase-auth'
@@ -55,4 +57,6 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
     implementation 'com.google.android.exoplayer:exoplayer:2.19.1'
+    implementation 'com.google.android.material:material:1.9.0'
+
 }
