--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'com.google.android.libraries.places:places:3.3.0'
     implementation 'com.google.firebase:firebase-database'
     implementation(platform("com.google.firebase:firebase-bom:32.2.2"))
+    implementation 'com.google.mlkit:smart-reply:17.0.4'
     implementation 'com.google.firebase:firebase-auth'
     implementation("com.google.firebase:firebase-analytics")
     implementation 'com.google.firebase:firebase-firestore'
