--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         tools:targetApi="31">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="////" />
+            android:value="AIzaSyC_ZeHF1t5tyRgHF-5gNILRhLVhFdZXLBs" />
 
         <activity
             android:name=".screen.authentication.MainActivity"
