--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,5 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer:2.19.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
 }
