--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,12 @@ android {
     buildFeatures {
         viewBinding = true
     }
+    buildscript {
+        repositories {
+            google()
+            mavenCentral()
+        }
+    }
 
     namespace 'com.project.chatapp'
     compileSdk 35
@@ -50,6 +56,7 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+    implementation 'com.google.mlkit:smart-reply:17.0.4'
     implementation 'com.hbb20:ccp:2.5.1'
     implementation 'com.cloudinary:cloudinary-android:2.3.1'
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
@@ -59,5 +66,6 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer:2.19.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'com.google.code.gson:gson:2.8.9'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
 }
