--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC"/>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -35,7 +36,7 @@
         tools:targetApi="31">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="////" />
+            android:value="///" />
 
         <activity
             android:name=".screen.authentication.MainActivity"
@@ -47,9 +48,6 @@
         </activity>
         <activity
             android:name=".screen.chat.AudioCallActivity"
-            android:exported="false" />
-        <activity
-            android:name=".screen.location.PickLocationActivity"
             android:exported="false" />
         <activity
             android:name=".screen.chat.VideoCallActivity"
@@ -64,7 +62,7 @@
             android:name=".screen.chat.ChatsActivity"
             android:exported="true" />
         <activity
-            android:name=".screen.chat.AddContactActivity"
+            android:name=".screen.contact.AddContactActivity"
             android:exported="false"
             android:windowSoftInputMode="adjustResize" />
         <activity
@@ -91,12 +89,17 @@
                 android:resource="@xml/file_paths" />
         </provider>
         <service
-            android:name=".MyFirebaseMessagingService"
+            android:name=".services.MyFirebaseMessagingService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+        <service
+            android:name=".services.NotificationService"
+            android:enabled="true"
+            android:exported="false"
+            android:foregroundServiceType="dataSync"/>
     </application>
 
 </manifest>
